--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -7,12 +7,19 @@
   line-height: 18px;
   box-sizing: border-box;
   padding: 10px 0 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
-.popup__input:last-of-type {
-  margin-bottom: 0;
+.popup__input_type_error {
+  border-bottom: 1px solid #f00;
 }
+
+.popup__error {
+  display: block;
+  font-size: 12px;
+  color: #f00;
+}
+
 
 @media screen and (max-width: 568px) {
   .popup__title {
