--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -7,6 +7,38 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile__image_overlay {
+  background: rgba(0, 0, 0, .5);
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+
+.profile__image_edit {
+  position: absolute;
+  width: 26px;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.profile__image:hover .profile__image_overlay {
+  opacity: 1;
+  cursor: pointer;
+} 
+
+.profile__image:hover .profile__image_edit {
+  opacity: 1;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 740px) {
